--- a/external-verification-service/resources/CodePipeline.yml
+++ b/external-verification-service/resources/CodePipeline.yml
@@ -21,7 +21,7 @@ CodePipeline:
               Repo: !Ref GithubRepository
               Branch: !Ref GithubBranch
               PollForSourceChanges: false
-              OAuthToken: ${env:GITHUB_TOKEN} # ${ssm:/secret/dev}
+              OAuthToken: ${ssm:/secret/dev} # ${ssm:/secret/dev}
             OutputArtifacts:
               - Name: SourceCode
       - Name: Build
@@ -95,7 +95,7 @@ CodeBuildSourceCredentials:
   Properties:
     AuthType: PERSONAL_ACCESS_TOKEN
     ServerType: GITHUB
-    Token: ${env:GITHUB_TOKEN} # ${ssm:/secret/dev}
+    Token: ${ssm:/secret/dev} # ${ssm:/secret/dev}
 
 CodeBuildProject:
   Type: AWS::CodeBuild::Project
@@ -287,7 +287,7 @@ CodePipelineWebHook:
   Properties:
     Authentication: GITHUB_HMAC
     AuthenticationConfiguration:
-      SecretToken: ${env:GITHUB_TOKEN} # ${ssm:/secret/dev}
+      SecretToken: ${ssm:/secret/dev} # ${ssm:/secret/dev}
     RegisterWithThirdParty: true
     Filters:
       - JsonPath: "$.ref"
