--- a/external-verification-service/config/deploy/buildspec.dev.yml
+++ b/external-verification-service/config/deploy/buildspec.dev.yml
@@ -1,11 +1,33 @@
 version: 0.2
 
-env:
-  variables:
-    ENV_NAME: dev
-
 phases:
-  build:
+  install:
+    on-failure: ABORT
+    runtime-versions:
+      nodejs: 18
     commands:
-      - echo deployment phase
-      - echo $ENV_NAME
+      - echo installing serverless cli
+      - npm i -g serverless
+      - cd external-verification-service
+      - echo installing npm dependecies of infra service
+      - npm install
+      - serverless plugin install --name serverless-plugin-typescript
+      - serverless plugin install --name serverless-apigateway-service-proxy
+      - serverless plugin install --name serverless-iam-roles-per-function
+
+  build:
+    on-failure: ABORT
+    commands:
+      - echo Deploying
+      - serverless deploy --stage dev
+
+# the file codebuild should deploy to s3
+artifacts:
+  files:
+    - external-verification-service/my-artifact/*
+  name: myProjectArtifacts
+
+cache:
+  paths:
+    - "external-verification-service/node_modules/**/*"
+# ${env:GITHUB_TOKEN}
