--- a/external-verification-service/resources/CodePipeline.yml
+++ b/external-verification-service/resources/CodePipeline.yml
@@ -156,11 +156,11 @@ CodeBuildDeployDevProject:
       Type: LINUX_CONTAINER
       ComputeType: BUILD_GENERAL1_SMALL
       Image: !Ref CodeBuildEnvironmentImage
-      # EnvironmentVariables:
-      #   - Name: BUCKET_NAME
-      #     Value: ${env:BUCKET_NAME}
-      #   - Name: GITHUB_TOKEN
-      #     Value: ${env:GITHUB_TOKEN}
+      EnvironmentVariables:
+        - Name: BUCKET_NAME
+          Value: ${env:BUCKET_NAME}
+        - Name: GITHUB_TOKEN
+          Value: ${env:GITHUB_TOKEN}
 
 CodeBuildQAProject:
   Type: AWS::CodeBuild::Project
