work on books service

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.115"
+    "@types/aws-lambda": "^8.10.115",
+    "serverless-plugin-typescript": "^2.1.4",
+    "typescript": "^5.0.4"
   }
 }
