--- a/books-service/serverless.yml
+++ b/books-service/serverless.yml
@@ -12,48 +12,13 @@ provider:
   deploymentBucket:
     name: ${env:BUCKET_NAME}
 
-functions:
-  hello:
-    handler: handler.hello
-# #    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
+plugins:
+  - serverless-plugin-typescript
+  - serverless-appsync-plugin
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
+# functions:
+#   getBookById:
+#     handler: src/getBookById.handler
 
 # you can add CloudFormation resource templates here
 resources:
@@ -71,8 +36,94 @@ resources:
 #       Description: "Description for the output"
 #       Value: "Some output value"
 
-plugins:
-  - serverless-plugin-typescript
-  # - serverless-appsync-plugin
 # custom:
 #   appSync:
+#     name: books
+#     authenticationType: AMAZON_COGNITO_USER_POOLS
+#     additionalAuthenticationProviders:
+#       - authenticationType: AWS_IAM
+#     userPoolConfig:
+#       awsRegion: us-east-1
+#       defaultAction: ALLOW
+#       userPoolId: !Ref cognitoUserPool
+#     mappingTemplatesLocation: mapping-templates
+#     mappingTemplates:
+#       - type: Query
+#         field: getBookById
+#         dataSource: booksTable
+#       - type: Query
+#         field: listBooks
+#         dataSource: booksTable
+#       - type: Mutation
+#         field: createBook
+#         dataSource: booksTable
+#     dataSources:
+#       - type: AMAZON_DYNAMODB
+#         name: booksTable
+#         config:
+#           tableName: !Ref BooksTable
+
+appSync:
+  name: books-${self:provider.stage}
+  authentication:
+    type: "AMAZON_COGNITO_USER_POOLS"
+    config:
+      awsRegion: us-east-2
+      defaultAction: ALLOW
+      userPoolId: !Ref CognitoUserPool
+  # schema:
+  #   - "schema.graphql"
+  pipelineFunctions:
+    getBookById:
+      # dataSource: booksTable
+      dataSource:
+        type: "AWS_LAMBDA"
+        config:
+          function:
+            timeout: 30
+            handler: "src/getBookById.handler"
+    listBooks:
+      dataSource:
+        type: "AWS_LAMBDA"
+        config:
+          function:
+            timeout: 30
+            handler: "src/listBooks.handler"
+    createBook:
+      dataSource:
+        type: "AWS_LAMBDA"
+        config:
+          function:
+            timeout: 30
+            handler: "src/createBook.handler"
+
+  resolvers:
+    Query.getBookById:
+      dataSource: booksTable
+      functions:
+        - getBookById
+    Query.listBooks:
+      dataSource: booksTable
+      functions:
+        - listBooks
+    createBook:
+      type: Mutation
+      field: createBook
+      functions:
+        - createBook
+    # getBook:
+    #   type: Query
+    #   field: getBookById
+    #   functions:
+    #     - getBookById
+  dataSources:
+    booksTable:
+      type: AMAZON_DYNAMODB
+      description: "dynamo db table"
+      config:
+        tableName: !Ref BooksTable
+# {type}.{field}.request.vtl , {type}.{field}.response.vtl
+# https://docs.aws.amazon.com/appsync/latest/devguide/resolver-mapping-template-reference-dynamodb.html
+# request helps appsync make a request to dynamo db
+# https://github.com/sid88in/serverless-appsync-plugin
+# https://github.com/sid88in/serverless-appsync-plugin
