--- a/books-service/resources/Cognito.yml
+++ b/books-service/resources/Cognito.yml
@@ -36,7 +36,7 @@ CongitoCustomGroup:
 CongitoAdminIAMRole:
   Type: AWS::IAM::Role
   Properties:
-    RoleName: CognitoAdminRole
+    RoleName: CognitoAdminRole-${self:provider.stage}
     Description: "This is the iam role for admins of feedback"
     AssumeRolePolicyDocument:
       Version: "2012-10-17"
@@ -63,7 +63,7 @@ CongitoCustomersIAMRole:
   Type: AWS::IAM::Role
   Properties:
     RoleName: CognitoCustomerRole
-    Description: "This is the iam role for customers of feedback"
+    Description: "This is the iam role for customers"
     AssumeRolePolicyDocument:
       Version: "2012-10-17"
       Statement:
@@ -91,3 +91,84 @@ CongitoCustomersIAMRole:
                 - "dynamodb:BatchGetItem"
               Resource:
                 - !GetAtt BooksTable.Arn
+                - !Join [
+                    ":",
+                    [
+                      "arn:aws:dynamodb",
+                      "${aws:region}",
+                      "${aws:accountId}",
+                      !Join [
+                        "/",
+                        [
+                          "table",
+                          "${self:custom.bookTableName.name}",
+                          "index",
+                          "ByPriceAndCreatedAtIndex",
+                        ],
+                      ],
+                    ],
+                  ]
+
+# arn:aws:dynamodb:us-east-2:275102385991:table/books-service-dev-BooksTable-1KHCQO5YALOM5/index/ByPriceIndex-dev
+# connect user pool with identity pool
+# only identity role can have iam role for unauthenticated user
+CognitoIdentityPool:
+  Type: AWS::Cognito::IdentityPool
+  Properties:
+    AllowUnauthenticatedIdentities: true # allow unauthenticated access
+    CognitoIdentityProviders:
+      - ClientId: !Ref CognitoUserPoolClient # associate identity pool with our user pool
+        ProviderName: !GetAtt CognitoUserPool.ProviderName
+    IdentityPoolName: AuctionBooksIdentityPool-${self:provider.stage}
+
+# attach roles to authenticated and unauthenticated users
+CognitoIdentityPoolRoleAttachement:
+  Type: AWS::Cognito::IdentityPoolRoleAttachment
+  Properties:
+    IdentityPoolId: !Ref CognitoIdentityPool
+    Roles:
+      unauthenticated: !GetAtt CognitoUnAuthenticatedIAMRole.Arn
+
+# IAM ROLE for cognito unauthenticated federation
+CognitoUnAuthenticatedIAMRole:
+  Type: AWS::IAM::Role
+  Properties:
+    RoleName: CognitoUnAuthRole-${self:provider.stage}
+    Description: "This is the iam role for unauthenticated users"
+    AssumeRolePolicyDocument:
+      Version: "2012-10-17"
+      Statement:
+        - Effect: Allow
+          Principal: # who is going to assume that role, its federation cognito
+            Federated:
+              - "cognito-identity.amazonaws.com"
+          Action:
+            - "sts:AssumeRoleWithWebIdentity"
+    Policies:
+      - PolicyName: "UnAuthUserPolicy"
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: "Allow"
+              Action:
+                - "appsync:GraphQL"
+              Resource:
+                - !Join [
+                    ":",
+                    [
+                      "arn:aws:appsync",
+                      "${self:provider.region}",
+                      "${aws:accountId}",
+                      !Join [
+                        "/",
+                        [
+                          "apis",
+                          "${appsync:id}",
+                          "types",
+                          "Query",
+                          "fields",
+                          "getBookById",
+                        ],
+                      ],
+                    ],
+                  ]
