--- a/books-service/resources/DynamoTable.yml
+++ b/books-service/resources/DynamoTable.yml
@@ -1,41 +1,55 @@
 BooksTable:
   Type: AWS::DynamoDB::Table
   Properties:
+    TableName: ${self:custom.bookTableName.name}
     AttributeDefinitions:
-      - AttributeName: BookId
+      - AttributeName: bookId
+        AttributeType: S
+      - AttributeName: price
+        AttributeType: N
+      - AttributeName: createdAt
         AttributeType: S
     BillingMode: PAY_PER_REQUEST
     KeySchema:
-      - AttributeName: BookId
+      - AttributeName: bookId
         KeyType: HASH
     Tags:
       - Key: Name
         Value: feedback.table
+    GlobalSecondaryIndexes:
+      - IndexName: ByPriceAndCreatedAtIndex
+        KeySchema:
+          - AttributeName: price
+            KeyType: "HASH"
+          - AttributeName: createdAt
+            KeyType: RANGE
+        Projection:
+          ProjectionType: ALL
 
 OrdersTable:
   Type: AWS::DynamoDB::Table
   Properties:
     AttributeDefinitions:
-      - AttributeName: UserId
+      - AttributeName: userId
         AttributeType: S
-      - AttributeName: OrderId
+      - AttributeName: orderId
         AttributeType: S
-      - AttributeName: BookId
+      - AttributeName: bookId
         AttributeType: S
       # - AttributeName: CreatedAt
       #   AttributeType: S
     BillingMode: PAY_PER_REQUEST
     KeySchema:
-      - AttributeName: UserId
+      - AttributeName: userId
         KeyType: HASH
-      - AttributeName: OrderId
+      - AttributeName: orderId
         KeyType: RANGE
     GlobalSecondaryIndexes:
       - IndexName: ByOrderIndex
         KeySchema:
-          - AttributeName: BookId
+          - AttributeName: bookId
             KeyType: "HASH"
-          - AttributeName: OrderId
+          - AttributeName: orderId
             KeyType: "RANGE"
         Projection:
           ProjectionType: ALL
