--- a/notes-service/tsconfig.json
+++ b/notes-service/tsconfig.json
@@ -10,7 +10,13 @@
     "moduleResolution": "node",
     "lib": ["es2015"],
     "rootDir": "./",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "logging": ["./src/layers/logging/nodejs/node_modules/logging"],
+      "/opt/nodejs/node_modules/logging": [
+        "./src/layers/logging/nodejs/node_modules/logging"
+      ]
+    }
   },
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["src/**/*.ts", "src/layers/**/node_modules/**/*"]
