cdk development of eventbridge

--- a/cdk-services/src/basket-service/package.json
+++ b/cdk-services/src/basket-service/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.341.0",
+    "@aws-sdk/client-eventbridge": "^3.341.0",
     "@aws-sdk/util-dynamodb": "^3.341.0",
     "http-errors": "^2.0.0"
   },
