--- a/cdk-services/package.json
+++ b/cdk-services/package.json
@@ -22,6 +22,12 @@
     "typescript": "~5.0.4"
   },
   "dependencies": {
+    "@middy/core": "^4.5.0",
+    "@middy/http-cors": "^4.5.0",
+    "@middy/http-error-handler": "^4.5.0",
+    "@middy/http-event-normalizer": "^4.5.0",
+    "@middy/http-json-body-parser": "^4.5.0",
+    "@middy/validator": "^4.5.0",
     "aws-cdk-lib": "2.81.0",
     "constructs": "^10.0.0",
     "http-errors": "^2.0.0",
