--- a/cdk-services/package.json
+++ b/cdk-services/package.json
@@ -31,6 +31,7 @@
     "aws-cdk-lib": "2.81.0",
     "constructs": "^10.0.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "source-map-support": "^0.5.21"
   }
 }
